--- a/views/shop.html
+++ b/views/shop.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/main.css">
     <title>FoodHub</title>
 </head>
 <body>
     <header>
-        <div class="logo"><a href="#">FoodHub</a></div>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/admin/add-product">Add Food</a></li>
+                <li><a href="/add-product">Add Food</a></li>
             </ul>
-            
         </nav>
     </header>
 
     <main>
         <h2>Available Foods</h2>
+
     </main>
 
 </body>
