--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,10 +1,10 @@
-<%- include('./partials/head') %>
+<%- include('../partials/head.ejs') %>
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
-    <%- include('./partials/navigation') %>
+    <%- include('../partials/navigation.ejs') %>
 
     <main>
         <form class="product-form" action="/admin/product" method="POST">
